redirect to mobile or desktop

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         if (detectMob())
             window.location.href = "mobile";
         else
-            window.location.href = "mobile";
+            window.location.href = "desktop";
     </script>
 </head>
 
