--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <title>Baby Python</title>
     <script type="text/javascript">
-        function detectMob() {
-            return ((window.innerWidth <= 800) && (window.innerHeight <= 600));
+        function detectMobile() {
+            return ((window.innerWidth <= 500) || (window.innerHeight <= 500));
         }
-        if (detectMob())
+        if (detectMobile())
             window.location.href = "mobile";
         else
             window.location.href = "desktop";
